# organizer

./: .env.sample  .flake8  .gitignore  Dockerfile  Pipfile  README.md  createdb.sql  db.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: checks.yml
organizer/: __init__.py  __main__.py  commands.py  database.py  db.py  handlers.py  init.sql  keyboards.py  loader.py  main.py  scan.py  scanning.py  states.py
organizer/sql/: init.sql
