[tool.black]
line-length = 120
target_version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | logs
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
name = "organizer"
version = "0.1.0"
description = "telegram bot"
authors = ["DONSIMON92 <semenische@yandex.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.14.2"
asyncpg = "^0.23.0"
aioredis = "^1.3.1"
loguru = "^0.5.3"
uvloop = "^0.15.2"
flake8-black = "^0.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"
flake8-quotes = "^3.2.0"
flake8-variables-names = "^0.0.4"
pyflakes = "^2.3.1"
pep8-naming = "^0.12.0"
black = "^21.6b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
