[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | \logs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["organizer"]
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.mypy]
python_version = "3.7"
files = "organizer/*.py"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
name = "organizer"
version = "0.1.0"
description = "telegram bot"
authors = ["donBarbos <donbarbos@proton.me>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.14.2"
asyncpg = "^0.23.0"
aioredis = "^1.3.1"
loguru = "^0.5.3"
uvloop = "^0.15.2"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-polyfill = "^1.0.2"
flake8-quotes = "^3.2.0"
flake8-variables-names = "^0.0.4"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
pyflakes = "^2.3.1"
pep8-naming = "^0.12.0"
black = "^21.6b0"
isort = "^5.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
